<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snooker Assistant</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_activity_start">StartActivity</string>    
    <string name="title_activity_choose_player">ChoosePlayerActivity</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="player_name">Name</string>
    <string name="click_player_1_name">clickButtonPlayer1Name</string>
    <string name="click_player_2_name">clickButtonPlayer2Name</string>
    <string name="click_button_start_game">clickButtonStart</string>    
    <string name="start">START</string>
    
    <string name="click_button_ok">clickButtonOk</string>    
    <string name="choose_name">OK</string>
    <string name="warning">Please enter player name and after click "DONE" button on your keyboard</string>
    
    <string name="game_break">Break</string>
    <string name="game_score">Score</string>
    <string name="game_turn">Turn</string>
    <string name="game_stop">Stop</string>
    <string name="game_foul">Foul</string>
    
    <string name="ball_red">Red</string>
    <string name="ball_yellow">Yellow</string>
    <string name="ball_green">Green</string>
    <string name="ball_brown">Brown</string>
    <string name="ball_blue">Blue</string>
    <string name="ball_pink">Pink</string>
    <string name="ball_black">Black</string>
    
    <string name="click_red">clickRed</string>
    <string name="click_yellow">clickYellow</string>
    <string name="click_green">clickGreen</string>
    <string name="click_brown">clickBrown</string>
    <string name="click_blue">clickBlue</string>
    <string name="click_pink">clickPink</string>
    <string name="click_black">clickBlack</string>
    <string name="click_foul">clickFoul</string>
    <string name="click_button_player_1">clickPlayer1</string>
    <string name="click_button_player_2">clickPlayer2</string>
    <string name="click_name_1">clickPlayer1Name</string>
    <string name="click_name_2">clickPlayer2Name</string>
    
    <string name="game_back">Back</string>
    <string name="game_end_frame">End Frame</string>
    <string name="game_reset_frame">Reset Frame</string>
    <string name="game_end_game">End Game</string>
    <string name="game_undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="title_fouls">Choose foul points</string>
    

</resources>
