<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayoutMain1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:keepScreenOn="true"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRowMain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.16" >

        <TextView
            android:id="@+id/textStatusBar"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            android:text="there will be status bar"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRowMain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_weight="0.52">

        <Button
            android:id="@+id/buttonPlayer1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:onClick="@string/click_button_player_1"
            android:background="@drawable/button_player"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_light" />
        
		<TextView
            android:id="@+id/textFrameScore"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
                

        <Button
            android:id="@+id/buttonPlayer2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:onClick="@string/click_button_player_2"
            android:background="@drawable/button_player"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_light" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowMain3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.16" >

        <TextView
            android:id="@+id/textPlayer1Score"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/game_score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textPlayerBreak"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/game_break" />

        <TextView
            android:id="@+id/textPlayer2Score"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/game_score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRowMain4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_weight="0.16">

        <Button
            android:id="@+id/buttonRed"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@string/click_red"
            android:background="@drawable/button_red"/>

        <Button
            android:id="@+id/buttonYellow"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@string/click_yellow"
            android:background="@drawable/button_yellow"/>

        <Button
            android:id="@+id/buttonGreen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@string/click_green"
            android:background="@drawable/button_green"/>

        <Button
            android:id="@+id/buttonBrown"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@string/click_brown"
            android:background="@drawable/button_brown"/>

        <Button
            android:id="@+id/buttonBlue"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@string/click_blue"
            android:background="@drawable/button_blue"/>

        <Button
            android:id="@+id/buttonPink"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@string/click_pink"
            android:background="@drawable/button_pink"/>

        <Button
            android:id="@+id/buttonBlack"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@string/click_black"
            android:background="@drawable/button_black"/>

        <Button
            android:id="@+id/buttonFoul"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@string/click_foul"
            android:background="@drawable/button_foul"
            android:text="@string/game_foul" />
    </TableRow>

</TableLayout>